[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Evan Wildenhain <evan.wildenhain@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
bitvec = "0.22.3"
cached = "0.26.2"
combine = "4.6.2"
